[gd_scene load_steps=11 format=3 uid="uid://cxjpn016wk5vr"]

[ext_resource type="Texture2D" uid="uid://k7vmromfr4wu" path="res://levels/credits/Credits/Michele.png" id="1_53cnf"]
[ext_resource type="Script" path="res://npc_act_1/scripts/npc.gd" id="1_3641o"]
[ext_resource type="Script" path="res://dialogue/data/dialog_data.gd" id="2_834sl"]
[ext_resource type="Texture2D" uid="uid://x01qfcfa3ev7" path="res://levels/credits/Credits/Simone.png" id="3_jfqf1"]
[ext_resource type="Script" path="res://requirement/scripts/requirement.gd" id="4_fh53a"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="5_ye2d7"]

[sub_resource type="Resource" id="Resource_m13sm"]
script = ExtResource("2_834sl")
dialogue_text = Array[String](["Excuse me, but the museum's about to close. Could you please head out?"])
character_image = ExtResource("3_jfqf1")
text_name = "Night Guardian"
triggers = Array[ExtResource("4_fh53a")]([])

[sub_resource type="Resource" id="Resource_5jobv"]
script = ExtResource("2_834sl")
dialogue_text = Array[String](["Yep, I'll be out of here in 5 minutes."])
character_image = ExtResource("1_53cnf")
text_name = "Visitor"
triggers = Array[ExtResource("4_fh53a")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmc1t"]
size = Vector2(230, 228)

[sub_resource type="CircleShape2D" id="CircleShape2D_ngufx"]
radius = 197.091

[node name="Npc" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_3641o")
dialog = Array[ExtResource("2_834sl")]([SubResource("Resource_m13sm"), SubResource("Resource_5jobv")])

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -30.0
offset_top = -168.0
offset_right = 30.0
offset_bottom = -126.0
theme_override_font_sizes/font_size = 30
text = "Talk E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_53cnf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xmc1t")

[node name="Interactable" parent="." instance=ExtResource("5_ye2d7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
shape = SubResource("CircleShape2D_ngufx")

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="Interactable" to="." method="_on_interactable_player_exit"]
